javascript/ql/test/query-tests/NodeJS/InvalidExport/tst.js
exports.a = 23; // OK
exports = 56; // NOT OK
